# tiny_trainer

./: .gitignore  __init__.py  abstract_trainer.py  base_config.py  default_profiler.py  default_trainer.py  layer.py  maskDiT.py  maskGIT.py  pyproject.toml  test_maskDiT.py  timer.py  trainer.py  util.py
src/: __init__.py  abstract_trainer.py  default_trainer.py
src/config/: __init__.py  base_config.py  util.py
src/tiny_trainer/: abstract_trainer.py  default_profiler.py  default_trainer.py
src/tiny_trainer/config/: base_config.py
src/tiny_trainer/util/: __init__.py  seed.py  timer.py
src/util/: __init__.py
test/: base.yaml  cleanup.sh  script.py  test_profile.yaml  test_profile_and_compile.yaml  test_profile_cpu_ddp.yaml  test_trainer.py
